--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Mack</title>
-    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../fontawesome-free-6.4.0-web/css/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
+    <link href="fontawesome-free-6.1.1-web/css/all.min.css" rel="stylesheet" />
 </head>
 <style>
     .card{
